--- a/views/testAPIEnsembl.ejs
+++ b/views/testAPIEnsembl.ejs
@@ -140,42 +140,20 @@
           <p>GWAS Information</p>
           <div id="info_rs">
             <p>test 3</p>
+            <tr>
+              <th></th>
+              <td>
+
+
+              </td>
+            </tr>
+            <table id='info_asso'>
+
+            </table>
           </div>
         </div>
       </div>
   </div>
-  <script type="text/javascript">
-    /*
-                                                                                        function ajax(page, callback, post) {
-                                                                                          var xhr
-                                                                                          if (window.XMLHttpRequest || window.ActiveXObject) {
-                                                                                            if (window.XMLHttpRequest) {
-                                                                                              xhr = new XMLHttpRequest()
-                                                                                            } else {
-                                                                                              try {
-                                                                                                xhr = new ActiveXObject("Msxml2.XMLHTTP")
-                                                                                              } catch (e) {
-                                                                                                xhr = new ActiveXObject("Microsoft.XMLHTTP")
-                                                                                              }
-                                                                                            }
-                                                                                          } else {
-                                                                                            document.location.href = page
-                                                                                          }
-                                                                                          xhr.onreadystatechange = function() {
-                                                                                            if (typeof callback != "undefined") {
-                                                                                              callback(xhr.responseText);
-                                                                                            }
-                                                                                          };
-                                                                                          xhr.open("GET", page, true)
-                                                                                          xhr.send(null)
-                                                                                        }
-                                                                                        ajax("SNP.txt", function(data[i]) {
-                                                                                          console.log(data[i])
-                                                                                          document.body.innerHTML = data[i].split(/\n/g)[0] // blabla
-                                                                                        })
-                                                                                    */
-
-  </script>
 </body>
 
 </html>
