--- a/views/location.ejs
+++ b/views/location.ejs
@@ -4,28 +4,30 @@
 <head>
   <meta charset="utf-8">
   <title>Bioinfo</title>
+</head>
 
-  <body>
-    <% if (dataLoc) { %>
+<body>
+  <div id='content'>
+    <%
+    for (let i = 0; i < data.length; i++) {      
+    if (data[i]) { %>
       <table>
         <thead>
-          <th>SNP</th>
+          <th>SNP </th>
         </thead>
         <tbody>
           <td>
-            <% for(let i in dataLoc.snp){ %>
+            <% for(let j in data[i].snp.SnpList){ %>
               <p>
-                <%=dataLoc.snp[i]%> <span>
-                <a href="result.ejs" target="lien">
-                  
-                  </a>
-                </span> </p>
+                <%=data[i].snp.SnpList[j]%>
+              </p>
               <% } %>
           </td>
         </tbody>
       </table>
       <% } %>
-  </body>
-</head>
+        <% } %>
+  </div>
+</body>
 
 </html>
