--- a/views/testAPIEnsembl.ejs
+++ b/views/testAPIEnsembl.ejs
@@ -26,7 +26,8 @@
       <div id="RsIdbox">
         <%= data[i].name %>
       </div>
-      <button type="button" class="btn_info" data-toggle="collapse" data-target="#inner-content<%= i %>">Show/Hide</button>
+      <button type="button" class="btn_info" data-toggle="collapse" data-target="#inner-content<%= i %>">+</button>
+      <br/>
       <div id="inner-content<%= i %>" class="collapse">
         <div id='contentEnsembl'>
           <p>Ensembl Information</p>
