--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <body>
   <header id="header" class="header" role="banner">
     <div class="banner_div">
-      <p>Interface Centralisée d'accès aux APIs GTEX, GWAS, Ensembl et NCBI : Version 2.0</p>
+      <p1>Interface Centralisation API</p1>
     </div>
   </header>
   <div class="research" id="button_search">
@@ -24,7 +24,13 @@
       <form id="form_fileup" method="post" action="/fileup" enctype="multipart/form-data">
         <input type='file' id="file" name='fileToUpload'>
         <input type='submit' id="valid" value='valider'>
-        <br/> <span id="conseilUp">Veuillez charger un fichier txt contenant une liste de rs_id (un par ligne)</span> </form>
+        <br/> <span id="string-msg">Liste de rs_id (un/ligne)</span> </form>
     </div>
   </div>
+  <footer id="footer" class="footer" role="footer">
+    <div class="footer-div">
+      <p> Equipe PFE EFREI</p>
+      <p>Developeur : Galinou Silouane , Developeur : Payet Xavier</p>
+    </div>
+  </footer>
 </body>
