--- a/public/Stylesheet/APIEnsembl.css
+++ b/public/Stylesheet/APIEnsembl.css
@@ -1,5 +1,5 @@
   #header {
-    height: 90px;
+    height: 80px;
     background-color: #5f5f5f;
     padding: 0 3rem;
     overflow: hidden;
@@ -8,39 +8,54 @@
   
   p {
     font-style: normal;
-    font-size: 25px;
+    font-size: 16px;
     color: #205493;
   }
   
-  body {
-    margin-left: 15px auto;
-    margin-right: 15px auto;
-    padding: 15px;
-    width: 17250px;
-    background-color: #FFF;
-    overflow: hidden;
+  #global {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
+    background-color: #eeeeee;
   }
   
   #RsIdbox {
     color: #fff;
     background-color: #5f5f5f;
-    margin: 1em 0 0 0;
+    margin-top: 2px;
     display: inline-block;
     font-style: normal;
-    font-size: 42px;
+    font-size: 18px;
     color: #f1f1f1;
     padding: 0 1em 0 1em;
   }
   
+  #content {
+    margin: 5px;
+  }
+  
   #info_base {
-    border-collapse: separate;
+    border-collapse: collapse;
     border-spacing: 15px 8px;
   }
   
-  #info_var_gen {}
+  #info_var_gen {
+    border-spacing: 15px 8px;
+    border-bottom: 1px solid;
+    width: 100%;
+    border-collapse: collapse;
+  }
   
-  td {
-    padding: 5px;
+  #inner_content_glob {
+    padding-bottom: 5px;
+  }
+  
+  td,
+  th {
+    padding: 1em 1em 5em 1em;
+    border-spacing: 15px 8px;
+    text-align: left;
+    border-bottom: 1px solid #D3D3D3;
   }
   
   #inner-content0,
@@ -48,7 +63,8 @@
   #inner-content2,
   #inner-content3,
   #inner-content4 {
-    background-color: #e1f3f8;
+    background-color: #eeeeee;
+    border-bottom: 1px solid #000000;
     overflow: hidden;
   }
   
@@ -58,16 +74,15 @@
   
   #info_base .th {
     font-style: normal;
-    font-size: 20px;
+    font-size: 14px;
     padding: 0 3rem;
   }
   
   #contentEnsembl,
   #contentGtext,
   #contentGwas {
-    width: 600px;
+    width: 350px;
     display: table-cell;
-    border-left: 3px solid #205493;
-    padding: 1em 5em 1em 5em;
+    border-left: 3px solid #D3D3D3;
     overflow: hidden;
   }
