--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,10 +27,15 @@
         <br/> <span id="string-msg">Liste de rs_id (un/ligne)</span> </form>
     </div>
   </div>
+  <div id='lien'> </div>
   <footer id="footer" class="footer" role="footer">
     <div class="footer-div">
-      <p> Equipe PFE EFREI</p>
-      <p>Developeur : Galinou Silouane , Developeur : Payet Xavier</p>
-    </div>
+      <div id='team_dev'>
+        <p> Equipe PFE EFREI</p>
+        <p>Developpeur : Galinou Silouane (silouane.galinou@efrei.net), Payet Xavier (xavier.payet@efrei.net)</p>
+      </div>
+      <!--<div id='autres'>
+        <p>BI : Carette Julien, Puill Robin</p>
+      </div>--></div>
   </footer>
 </body>
