--- a/views/location.ejs
+++ b/views/location.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Bioinfo</title>
-</head>
+  <link rel="stylesheet" href="Stylesheet/location.css"> </head>
 
 <body>
   <div id='content'>
